# ccny_rgbd_tools

./: README.md
ccny_openni_launch/: package.xml
ccny_rgbd/: CMakeLists.txt  package.xml
ccny_rgbd/launch/: visual_odometry_bag.launch
ccny_rgbd/src/apps/: feature_viewer.cpp  visual_odometry.cpp
ccny_rgbd/src/ccny_rgbd/cfg/: FeatureDetectorConfig.py  SurfDetectorConfig.py
ccny_rgbd_data/: package.xml
